--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: #E2E4E6;
+    padding-top: 2em;
+}
+
+.form-container {
+    background: white;
+    padding: 3.5em;
+    width: 500px;
+    position: fixed;
+    left: 45%;
+    margin-left: -225px;
+}
+
+button {
+    padding: 0.5em;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 15px;
+    font-size: 1.3em;
+}
+
+.google {
+    border: 1px solid #95989A;
+    background: #fff;
+    background-size: 25px;
+}
