Added fabric canvas and storing and loading of canvas data.

--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -1,4 +1,4 @@
 <h1>Pencil Frontend Assignment</h1>
-<div class="form-container">
+<div class="container">
   <button (click)="loginGoogle()" class="google">Login or Signup With Google</button>
 </div>
