--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background: #E2E4E6;
-    padding-top: 2em;
+    background: #3D9970;
+    padding-top: 1em;
+    font-family: sans-serif;
 }
 
 .form-container {
@@ -9,16 +10,24 @@ body {
     padding: 3.5em;
     width: 500px;
     position: fixed;
-    left: 45%;
-    margin-left: -225px;
+    left: 25%;
+}
+
+.container {
+    text-align: center;
+}
+
+.canvas-area {
+    padding: 1em;
+    text-align: center;
 }
 
 button {
     padding: 0.5em;
-    width: 100%;
     cursor: pointer;
-    margin-bottom: 15px;
-    font-size: 1.3em;
+    margin-right: 15px;
+    font-size: 1em;
+    font-family: sans-serif;
 }
 
 .google {
