--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -1,4 +1,4 @@
 <h1>Pencil Frontend Assignment</h1>
 <div class="container">
-  <button (click)="loginGoogle()" class="google">Login or Signup With Google</button>
+  <button mat-raised-button (click)="loginGoogle()" class="google">Login or Signup With Google</button>
 </div>
