--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,8 +1,8 @@
-<h1 class="title">Canvas</h1>
+<h1>Canvas</h1>
 <div class="container">
     <mat-spinner style="margin:0 auto;" *ngIf="canvasLoaded === false"></mat-spinner>
     <br>
-    
+
     <div style=' text-align:center'>
         <canvas width="600" height="600" style="border: 1px solid #cccccc;" id="fabricSurface"></canvas>
         <br>
