Changed a bit of styling.

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -5,7 +5,7 @@
     <br>
 
     <div>
-        <canvas width="600" height="600" style="border: 1px solid #cccccc;" id="fabricSurface"></canvas>
+        <canvas width="600" height="600" id="fabricSurface"></canvas>
         <br>
     </div>
 
