Added a delete object functionality and updated readme file.

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -25,6 +25,10 @@
     <br>
 
     <div class="button-container">
+        <button mat-raised-button (click)="deleteObject()">Delete Selected Object</button>
+    </div>
+    
+    <div class="button-container">
         <button mat-raised-button (click)="clearCanvas()">Clear Canvas</button>
     </div>
     
